fix for overflow

--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -7,7 +7,6 @@ html {
 }
 body {
     font-family: variables.$font-family-sans-serif !important;
-    overflow-x: hidden;
 }
 
 .font-12 {
